--- a/css/mobile/grid_mb.css
+++ b/css/mobile/grid_mb.css
@@ -27,8 +27,8 @@
 }
 
 .box-4 {
-  grid-column: 4 / 5;
-  grid-row: 4 / 6;
+  grid-column: 1 / 3;
+  grid-row: 5 / 7;
 }
 
 .box-5 {
@@ -40,11 +40,12 @@
 }
 
 .box-7 {
-  grid-column: 2 / 5;
+  grid-column: 1 / 5;
 }
 
 .box-8 {
-  grid-row: 8 / 10;
+  grid-column: 1 / 2;
+  grid-row: 10 / 12;
 }
 
 .box-9 {
@@ -62,11 +63,11 @@
 
 .box-12 {
   grid-column: 3 / 5;
-  grid-row: 14 / 16;
+  grid-row: 16 / 18;
 }
 
 .box-13 {
-  grid-column: 2 / 5;
+  grid-column: 1 / 5;
   font-size: 1.5vw;
 }
 
@@ -79,17 +80,18 @@
 }
 
 .box-16 {
-  grid-column: 1 / 4;
-  grid-row: 20 / 22;
+  grid-column: 1 / 5;
+  grid-row: 22 / 23;
 }
 
 .box-17 {
-  grid-column: 2 / 5;
+  grid-column: 1 / 5;
+  grid-row: 23 / 24;
 }
 
 .box-18 {
-  grid-column: 4 / 5;
-  grid-row: 20 / 21;
+  grid-column: 3 / 5;
+  grid-row: 24 / 27;
 }
 
 .box-19 {
@@ -106,16 +108,16 @@
 }
 
 .box-22 {
-  grid-column: 1 / 3;
-  grid-row: 15 / 16;
+  grid-column: 3 / 5;
+  /* grid-row: 15 / 16; */
   h2 {
-    font-size: 3vw;
+    font-size: 4vw;
   }
 }
 
 .box-23 {
   grid-column: 3 / 4;
-  
+  grid-row: 4 / 6;
 }
 
 .box-31 {
@@ -128,21 +130,20 @@
 
 .box-33 {
   grid-column: 1 / 2;
-  grid-row: 16 / 17;
+  /* grid-row: 17 / 18; */
 }
 
 .box-34 {
-  grid-column: 1 / 2;
-  grid-row: 11 / 12;
+  grid-column: 2 / 4;
 }
 
 .box-35 {
-  grid-column: 3 / 5;
-  grid-row: 11 / 13;
+  grid-column: 1 / 3;
+  /* grid-row: 11 / 13; */
 }
 
 .box-36 {
-  grid-column: 2 / 3;
+  grid-column: 3 / 5;
 }
 
 .box-37 {
@@ -150,12 +151,12 @@
 }
 
 .box-38 {
-  grid-column: 1 / 3;
-  grid-row: 5 / 6;
+  grid-column: 3 / 5;
+  grid-row: 6 / 7;
 }
 
 .box-39 {
-  grid-column: 4 / 5;
+  grid-column: 1 / 3;
 }
 
 .box-40 {
@@ -164,6 +165,10 @@
 
 .box-41 {
   grid-column: 3 / 5;
+}
+
+.box-42 {
+  grid-column: 1 / 3;
 }
 
 /* musk */
@@ -308,8 +313,8 @@
 .emblem5,
 .emblem6 {
   box-sizing: border-box;
-  width: 18vw;
-  height: 18vw;
+  width: 40vw;
+  height: 40vw;
   border-radius: 50%;
   animation: spinZ 20s linear infinite;
   text-align: center;
@@ -330,7 +335,7 @@
   top: 0;
   bottom: 0;
   text-transform: uppercase;
-  font-size: 1.5vw;
+  font-size: 5vw;
   font-family: 'Helvetica Neue', sans-serif;
   transition: all 0.5s cubic-bezier(0,0,0,1);
 }
@@ -345,8 +350,8 @@
 }
 
 .btn {
-  width: 20vw;
-  height: 20vw;
+  width: 44vw;
+  height: 44vw;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -358,8 +363,8 @@
 .btn::after{
 	content: "";
 	display: inline-block;
-	width: 20vw;
-	height: 20vw;
+	width: 44vw;
+	height: 44vw;
 	border-radius: 50%;
 	position: absolute;
 	top: 0;
