--- a/css/mobile/style_mb.css
+++ b/css/mobile/style_mb.css
@@ -4,6 +4,7 @@ body {
   font-family: sans-serif;
   overflow-wrap: break-word;
   background-color: rgb(255, 255, 255);
+  text-align: justify;
 }
 
 html {
@@ -45,7 +46,7 @@ h5 {
 h6 {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 1.4;
   font-weight: 400;
 }
 
@@ -59,7 +60,7 @@ p {
   width: 90%;
   height: 240px;
   box-sizing: border-box;
-  margin: 20px auto 0px;
+  margin: 0 auto 0px;
   /* background-color: aqua; */
   position: relative;
 }
