--- a/css/mobile/sub_mb.css
+++ b/css/mobile/sub_mb.css
@@ -536,7 +536,7 @@ img.iphone {
 }
 
 .move .animation-bg5 {
-  background: #d4f028;
+  background: #e5ff0a;
   display: block;
   content: "";
   position: fixed;
