--- a/css/sub.css
+++ b/css/sub.css
@@ -680,7 +680,7 @@ img.ten-logo {
 }
 
 .move .animation-bg5 {
-  background: #d4f028;
+  background: #e5ff0a;
   display: block;
   content: "";
   position: fixed;
