--- a/css/mobile/style_mb.css
+++ b/css/mobile/style_mb.css
@@ -178,8 +178,8 @@ ul.content-list {
 .footer {
   position: relative;
   width: 90vw;
-  height: 320px;
-  margin: 15vw 0 5vw 5vw;
+  height: 400px;
+  margin: 15vw 0 0 5vw;
   /* background-color: blue; */
 }
 
@@ -194,7 +194,7 @@ ul.content-list {
 
 .contact {
   position: absolute;
-  bottom: 0;
+  bottom: 5vw;
   right: 0;
   text-align: right;
   p {
