--- a/css/mobile/header_mb.css
+++ b/css/mobile/header_mb.css
@@ -171,13 +171,11 @@ h3.small-name {
 
 .g-nav-contents {
   position: absolute;
-  /* right: 0px; */
-  padding-top: 16px;
-  /* text-align: right; */
+  padding-top: 2vh;
   text-align: left;
   li {
     /* height: 40px; */
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
     /* background-color: yellow; */
   }
 }
