--- a/css/sub.css
+++ b/css/sub.css
@@ -444,6 +444,10 @@
   background-color: #333;
 }
 
+.p-goto-nav__lists2 {
+  display: none;
+}
+
 .p-goto-nav__lists li p {
   position: relative;
   width: auto;
@@ -533,7 +537,7 @@ ul.item-list li a {
 }
 
 .web-page {
-  margin-top: 80px;
+  margin-top: 40px;
   display: flex;
 }
 
@@ -541,14 +545,20 @@ ul.item-list li a {
   width: 20px;
 }
 
+.comp {
+  margin-top: 40px;
+}
+
 img.window {
   width: 75%;
   height: 100%;
   margin-right: 5%;
+  border: 0.25px #333 solid;
 }
 
 img.iphone {
   width: 20%;
+  border: 0.25px #333 solid;
 }
 
 h1.konpake {
@@ -622,7 +632,7 @@ img.ten-logo {
 
 .joyl-img img {
   width: 100%;
-  border: 0.5px solid #333;
+  border: 0.25px solid #333;
 }
 
 .joyl-before2 {
