--- a/bird_coffee/css/style_mb.css
+++ b/bird_coffee/css/style_mb.css
@@ -37,6 +37,7 @@ p {
   background-position: center;
   background-size: cover;
   height: 100vh;
+
 }
 
 .top-header img {
@@ -57,14 +58,14 @@ p {
   /* position: fixed; */
   /* top: 0; */
   width: 100%;
-  height: 48px;
+  height: 56px;
   background-color: #ebebe9;
   opacity: 0.9;
   z-index: 19;
 }
 
 .header-nav h1 img {
-  height: 48.5px;
+  height: 55.9px;
   position: fixed;
   top: 0;
   z-index: 21;
@@ -96,8 +97,8 @@ nav ul {
 }
 
 #nav-toggle {
-  width: 40px;
-  height: 48px;
+  width: 48px;
+  height: 56px;
   margin-left: auto;
   position: relative;
   top: 0px;
@@ -105,7 +106,7 @@ nav ul {
 }
 
 #nav-toggle span {
-  width: 28px;
+  width:36px;
   height: 2px;
   display: block;
   background-color: #292929;
@@ -115,15 +116,15 @@ nav ul {
 }
 
 #nav-toggle span:nth-child(1) {
-  top: 14px;
+  top: 16px;
 }
 
 #nav-toggle span:nth-child(2) {
-  top: 23px;
+  top: 27px;
 }
 
 #nav-toggle span:nth-child(3) {
-  top: 32px;
+  top: 38px;
 }
 
 #nav-toggle.open span:nth-child(1) {
@@ -176,8 +177,8 @@ nav ul {
 .section3,
 .section4,
 .section5 {
-  width: 90%;
-  margin: 0 auto;
+  width: 90vw;
+  margin: 0 5vw 0 5vw;
 }
 
 .section1 {
@@ -190,7 +191,7 @@ nav ul {
   width: 90%;
   margin: 126px auto 20px;
   letter-spacing: 1.2;
-  line-height: 1.7;
+  line-height: 1.5;
   text-align: justify;
 }
 
@@ -199,7 +200,7 @@ nav ul {
   margin-right: 5%;
   padding-top: 10px;
   float: right;
-  line-height: 1.7;
+  line-height: 1.5;
   text-align: justify;
 }
 
