--- a/konpake/css/load.css
+++ b/konpake/css/load.css
@@ -6,10 +6,10 @@
 }
 
 #showloading {
-  width: 90%;
+  width: 90vw;
   height: 100vh;
   position: relative;
-  margin: 0 auto;
+  margin: 0 5vw 0 5vw;
 }
 
 #showloading.-visible {
