--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ ul.content-list {
   width: 80vw;
   height: 400px;
   margin: 15vw 0 3vw 10vw;
-  background-color: violet;
+  /* background-color: violet; */
 
 }
 
